fixes: aligned radial progress container cards with min-width proportionate to radial progress bars, fix card selection input population, conditionally display Time to goal label (month vs months), and update navbar button to link to About page

--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -5,3 +5,7 @@
 .text-green {
     color: rgb(83, 232, 83); /* Or any other gold color you prefer */
 }
+
+.progress-container{
+    min-width: 14rem;
+}
